# EasySphere

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.mk
src/: CMakeLists.txt
src/node/: CMakeLists.txt  Makefile  README.md  main.cpp
src/server/: CMakeLists.txt  Makefile  README.md  main.cpp
src/server/etc/: config.ini
test/: CMakeLists.txt  client.cpp
